--- a/drivers/misc/mediatek/vibrator/Makefile
+++ b/drivers/misc/mediatek/vibrator/Makefile
@@ -1,4 +1,4 @@
 obj-$(CONFIG_MTK_VIBRATOR) := vibrator_drv.o
-
+obj-$(CONFIG_THUNDERQUAKE_ENGINE_GPL) += thunderquake_engine.o
 obj-y += $(subst ",,$(CONFIG_MTK_PLATFORM))/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/vibrator/$(MTK_PLATFORM)
