--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -358,6 +358,7 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_MQ_IOSCHED_DEADLINE=y
@@ -365,14 +366,15 @@ CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_ANXIETY is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_SIOPLUS=y
 # CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="sioplus"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
