--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1873,6 +1873,7 @@ CONFIG_MTK_TYPEC_WATER_DETECT=y
 CONFIG_MTK_TYPEC_WATER_DETECT_BY_PCB=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
+CONFIG_THUNDERCHARGE_CONTROL=y
 # CONFIG_TCPC_RT1711H is not set
 # CONFIG_TCPC_RT5081 is not set
 # CONFIG_TCPC_MT6370 is not set
