--- a/drivers/power/supply/mediatek/Makefile
+++ b/drivers/power/supply/mediatek/Makefile
@@ -55,3 +55,4 @@ obj-y += misc/
 endif
 
 obj-$(CONFIG_THUNDERCHARGE_CONTROL) += thundercharge_control.o
+obj-$(CONFIG_FORCE_FAST_CHARGE)     += fastchg.o
