--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -666,11 +666,32 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PWRUTILX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ELECTROUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTILX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PIXUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_HELIX_SCHEDUTIL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMURFUTIL=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESSSCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARDSCHED is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ENERGY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DARKUTIL is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_PWRUTILX=y
+CONFIG_CPU_FREQ_GOV_ELECTROUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTILX=y
+CONFIG_CPU_FREQ_GOV_PIXUTIL=y
+CONFIG_CPU_FREQ_GOV_HELIX_SCHEDUTIL=y
+# FIXME CONFIG_CPU_FREQ_GOV_SMURFUTIL=y
+CONFIG_CPU_FREQ_GOV_DARKNESSSCHED=y
+CONFIG_CPU_FREQ_GOV_ALUCARDSCHED=y
+CONFIG_CPU_FREQ_GOV_ENERGY=y
+# FIXME CONFIG_CPU_FREQ_GOV_DARKUTIL=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT=10000
