--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1,5 +1,5 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_LOCALVERSION="-CocoLite-Kernel"
+CONFIG_LOCALVERSION="-NEXT_ROSS"
 # CONFIG_FHANDLE is not set
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_IKHEADERS=y
@@ -276,13 +276,15 @@ CONFIG_MTK_LEDS=y
 CONFIG_BACKLIGHT_SUPPORT_LM36273=y
 CONFIG_MTK_IRTX_PWM_SUPPORT=y
 CONFIG_MTK_PWM=y
+# CONFIG_MTK_SYSTRACKER_V2 is not set
+CONFIG_MTK_SYSTRACKER_DISABLE=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
 CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
-CONFIG_MTK_AEE_FEATURE=y
+# CONFIG_MTK_AEE_FEATURE is not set
 CONFIG_MTK_RTC=y
 CONFIG_MTK_USB_TYPEC_U3_MUX=y
 CONFIG_TCPC_MT6360=y
